--- a/Source/EOTR.csproj
+++ b/Source/EOTR.csproj
@@ -47,12 +47,16 @@
     <Reference Include="UnityEngine.IMGUIModule">
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.PhysicsModule">
+      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HarmonyPatches\Patch_Caravan_PathFollower_Event.cs" />
+    <Compile Include="HarmonyPatches\Patch_TravellingTransporters_Arrived_Event.cs" />
     <Compile Include="HarmonyStarter.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="Mod.cs" />
@@ -71,6 +75,9 @@
     <PackageReference Include="Lib.Harmony">
       <Version>2.4.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Publicize Include="Assembly-CSharp:RimWorld.ActiveTransporterInfo.tmpSavedPawns" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
