--- a/Source/EOTR.csproj
+++ b/Source/EOTR.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HarmonyPatches\Patch_Caravan_PathFollower_Event.cs" />
+    <Compile Include="HarmonyPatches\Patch_GravshipUtility_Arrive_Events.cs" />
     <Compile Include="HarmonyPatches\Patch_TravellingTransporters_Arrived_Event.cs" />
     <Compile Include="HarmonyStarter.cs" />
     <Compile Include="Helper.cs" />
@@ -78,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Publicize Include="Assembly-CSharp:RimWorld.ActiveTransporterInfo.tmpSavedPawns" />
+    <Publicize Include="Assembly-CSharp:RimWorld.Planet.Gravship.initialTile" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
